--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -32,19 +32,16 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="repeat" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Idd-io-e6G">
-                                            <rect key="frame" x="292" y="76" width="20" height="18"/>
+                                            <rect key="frame" x="295" y="82.333333333333329" width="19" height="14.333333333333329"/>
                                             <color key="tintColor" xcode11CocoaTouchSystemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="crk-En-N2K"/>
-                                                <constraint firstAttribute="width" constant="20" id="wAt-6Q-apf"/>
-                                            </constraints>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="14"/>
                                         </imageView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gjq-kL-8Xf" userLabel="Left View">
                                             <rect key="frame" x="0.0" y="0.0" width="103" height="103"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="bv4-uN-qad">
-                                                    <rect key="frame" x="21.5" y="24.000000000000004" width="60" height="56.5"/>
-                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <rect key="frame" x="21.5" y="23.833333333333332" width="60" height="56.333333333333343"/>
+                                                    <color key="tintColor" name="Background Color"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="bv4-uN-qad" secondAttribute="height" multiplier="1:1" id="1Ld-mk-AZl"/>
                                                     </constraints>
@@ -61,8 +58,8 @@
                                             <rect key="frame" x="103" y="0.0" width="217" height="103"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Name" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cMJ-uU-fhi">
-                                                    <rect key="frame" x="20" y="8" width="189" height="87"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="12" y="8" width="197" height="87"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -72,7 +69,7 @@
                                                 <constraint firstItem="cMJ-uU-fhi" firstAttribute="top" secondItem="UNM-N1-Mza" secondAttribute="top" constant="8" id="2PQ-Ba-bfn"/>
                                                 <constraint firstAttribute="trailing" secondItem="cMJ-uU-fhi" secondAttribute="trailing" constant="8" id="KFk-l8-3wG"/>
                                                 <constraint firstAttribute="bottom" secondItem="cMJ-uU-fhi" secondAttribute="bottom" constant="8" id="Vnh-nd-FAO"/>
-                                                <constraint firstItem="cMJ-uU-fhi" firstAttribute="leading" secondItem="UNM-N1-Mza" secondAttribute="leading" constant="20" id="etm-lZ-djE"/>
+                                                <constraint firstItem="cMJ-uU-fhi" firstAttribute="leading" secondItem="UNM-N1-Mza" secondAttribute="leading" constant="12" id="etm-lZ-djE"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -81,10 +78,10 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="UNM-N1-Mza" secondAttribute="trailing" id="6df-kt-7dy"/>
                                     <constraint firstItem="Gjq-kL-8Xf" firstAttribute="top" secondItem="wn0-gC-jEl" secondAttribute="top" id="B37-KJ-6c4"/>
-                                    <constraint firstAttribute="bottom" secondItem="Idd-io-e6G" secondAttribute="bottom" constant="8" id="JJL-x5-Teg"/>
+                                    <constraint firstAttribute="bottom" secondItem="Idd-io-e6G" secondAttribute="bottom" constant="6" id="JJL-x5-Teg"/>
                                     <constraint firstAttribute="bottom" secondItem="Gjq-kL-8Xf" secondAttribute="bottom" id="V2h-iB-RNo"/>
                                     <constraint firstAttribute="bottom" secondItem="UNM-N1-Mza" secondAttribute="bottom" id="Yyf-Ro-wyL"/>
-                                    <constraint firstAttribute="trailing" secondItem="Idd-io-e6G" secondAttribute="trailing" constant="8" id="b2Z-zq-OVS"/>
+                                    <constraint firstAttribute="trailing" secondItem="Idd-io-e6G" secondAttribute="trailing" constant="6" id="b2Z-zq-OVS"/>
                                     <constraint firstItem="UNM-N1-Mza" firstAttribute="top" secondItem="wn0-gC-jEl" secondAttribute="top" id="dWp-0U-TQd"/>
                                     <constraint firstItem="Gjq-kL-8Xf" firstAttribute="leading" secondItem="wn0-gC-jEl" secondAttribute="leading" id="iTs-d1-Xce"/>
                                     <constraint firstItem="UNM-N1-Mza" firstAttribute="leading" secondItem="Gjq-kL-8Xf" secondAttribute="trailing" id="ncY-jo-bhA"/>
